# genai-vectors-py

./: .env.example  01_basic_demo.ipynb  02_large_scale_test_clean.ipynb  COMPLIANCE_REPORT.md  Dockerfile  NOTEBOOKS_README.md  PARAMETER_MAPPING_FIXES.md  PARITY_IMPLEMENTATION_PLAN.md  README.md  basic_functionality_test.ipynb  debug_api.py  debug_metadata.py  debug_server.py  docker-compose.yml  docs.html  fix_boto3_client.py  large_scale_test.ipynb  openapi-s3vectors-compat.json  openapi-spec.json  pyproject.toml  pytest.ini  s3_compatibility_fix.py  s3vectors_boto3_testing.ipynb  test_basic_demo.py  test_db_direct.py  test_enhanced_filtering.py  test_main_functionality.py  test_mixed_metadata.py  test_parameter_mapping.py  test_proper_nonfilterable.py  test_replicate_issue.py  test_typed_metadata.py
src/app/: api.py  errors.py  index_builder.py  main.py  models.py  s3vectors_client.py
src/app/index/: backends.py  faiss_backends.py  hnsw_backend.py  indexer.py  ivfpq_backend.py  manager.py
src/app/lance/: __init__.py  db.py  filter_translate.py  index_ops.py  index_ops.py.bak  schema.py
src/app/metadata/: filter_engine.py  schema.py
src/app/storage/: lance_backend.py  s3_backend.py  slices.py
src/app/util/: config.py
tests/: conftest.py  run_tests.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_config.py  test_filter_translate.py  test_index_builder.py  test_index_ops.py  test_lance_db.py
